# dylibify

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dylibify.m  setup.cfg
cpp/: CMakeLists.txt  dylibify-lief-cpp.cpp
dylibify/: __init__.py  patch.py  reloc_chain.py  tool.py
obj-c/: dylibify.h  dylibify.m  main.m
