[metadata]
name = dylibify
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = "Turn a Mach-O executable into a dylib. Originally by Jake James."
version = attr: dylibify.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jevinskie/dylibify

[options]
python_requires = ~=3.10
packages = find:
zip_safe = True
install_requires =
  construct
  construct-typing

[options.entry_points]
console_scripts =
  dylibify = dylibify.tool:main

[build-system]
requires = ["setuptools"]
